--- a/README
+++ b/README
@@ -1,3 +1,10 @@
 RMACXX is a prototypical C++14 interface over MPI-3 RMA, which focuses
-on providing a thin layer above MPI, and at the same time aims to 
+on providing a thin layer above MPI RMA, and at the same time aims to 
 improve the programmability of MPI RMA.
+
+Paper on RMACXX:
+
+Sayan Ghosh, Yanfei Guo, Pavan Balaji, Assefaw Gebremedhin. 
+RMACXX: An Efficient High-Level C++ Interface over MPI-3 RMA. 
+21st IEEE/ACM International Symposium on Cluster, Cloud and 
+Internet Computing (CCGrid 2021).
