Implemented basic CI using Github Actions

--- a/tests/README
+++ b/tests/README
@@ -8,3 +8,9 @@ mpic++ -I../src -std=c++14 -g -o tt test.cpp -lcblas -lm
 # if you want to use MKL for bulk expressions...make sure MKLROOT is defined in bashrc/bash.profile
 # THIS IS PENDING AFTER LATEST DESIGN CHANGE
 mpic++ -std=c++14 -O3 -qopenmp -DMKL_ILP64 -I${MKLROOT}/include -g -I../src -o tt test.cpp -pthread -L${MKLROOT}/lib/intel64 -lmkl_intel_ilp64 -lmkl_intel_thread -lmkl_core -lm
+
+# To run all tests:
+make check -k -B
+
+# To run all tests from root:
+make -C tests check -k -B
